test/fixtures/fail/ident_leading_digit.l4gs.g
; A top-level identifier cannot start with a digit (it'd be a number).
        1foo = 1
